--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -9,6 +9,7 @@ geo-booleanop = { path = "../lib" }
 num-traits = "0.2"
 
 [dev-dependencies]
-geo = "0.11"
-geojson = "0.14"
+geo = "0"
+geo-types = { version = "0.4.1", default-features = false }
+geojson = "0"
 
